COR-624 | feat: refactor to use open telemetry, added tracing