@@ -5,11 +5,16 @@ COPY src ./src
 COPY pom.xml .
 
 RUN mvn package
+RUN curl -L -O https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar
+
 
 FROM public.ecr.aws/amazoncorretto/amazoncorretto:21-al2023-arm64 AS runtime-image
 
 COPY --from=build-image /app/target/photon-*.jar /app/photon.jar
+COPY --from=build-image /app/opentelemetry-javaagent.jar /app/otel.jar
+
+ENV JAVA_TOOL_OPTIONS = "-javaagent:/app/otel.jar"
 
 EXPOSE 2322
 
-ENTRYPOINT ["java", "-XX:+EnableDynamicAgentLoading", "-jar", "/app/photon.jar"]
+ENTRYPOINT ["java", "-jar", "/app/photon.jar"]
